EL-3593 - IE Fixing Icon Alignment (#1163)
* EL-3593 - IE Fixing Icon Alignment

* Fixed missing hover background

--- a/docs/app/pages/css/css-sections/icons/ux-icons/icon-preview/icon-snippet/icon-snippet.component.less
+++ b/docs/app/pages/css/css-sections/icons/ux-icons/icon-preview/icon-snippet/icon-snippet.component.less
@@ -10,6 +10,11 @@
 
     .snippet-copy-button {
         display: flex;
+        align-items: center;
+
+        &:focus:hover {
+            background-color: #e6e6e6;
+        }
     }
 
     ::ng-deep pre[class*="language-"] {
